[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/sprites/upscaled/ui/Window.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/upscaled/characters/modern7.png" type="Texture" id=2]
[ext_resource path="res://scenes/huds/HUD.gd" type="Script" id=4]

[sub_resource type="TileSet" id=1]
0/name = "window_tl"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "window_t"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 80, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "window_tr"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 112, 0, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "window_r"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 112, 16, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "window_br"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 112, 48, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "window_b"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 96, 48, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "window_bl"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 64, 48, 16, 16 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "window_l"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 64, 32, 16, 16 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0

[sub_resource type="DynamicFontData" id=2]
font_path = "res://assets/fonts/MonsterFriendFore.otf"

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = SubResource( 2 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 45, 8, 48, 64 )

[node name="HUD" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OverlayHUD" type="Node2D" parent="CanvasLayer"]

[node name="Window" type="TileMap" parent="CanvasLayer/OverlayHUD"]
z_index = 999
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 524292, 0, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 1, 0, 524315, 1, 0, 524316, 1, 0, 524317, 1, 0, 524318, 1, 0, 524319, 2, 0, 524324, 0, 0, 524325, 1, 0, 524326, 1, 0, 524327, 1, 0, 524328, 1, 0, 524329, 1, 0, 524330, 1, 0, 524331, 1, 0, 524332, 1, 0, 524333, 1, 0, 524334, 1, 0, 524335, 1, 0, 524336, 1, 0, 524337, 1, 0, 524338, 1, 0, 524339, 1, 0, 524340, 1, 0, 524341, 1, 0, 524342, 1, 0, 524343, 1, 0, 524344, 1, 0, 524345, 1, 0, 524346, 1, 0, 524347, 2, 0, 589828, 7, 0, 589855, 3, 0, 589860, 7, 0, 589883, 3, 0, 655364, 7, 0, 655391, 3, 0, 655396, 7, 0, 655419, 3, 0, 720900, 7, 0, 720927, 3, 0, 720932, 7, 0, 720955, 3, 0, 786436, 7, 0, 786463, 3, 0, 786468, 7, 0, 786491, 3, 0, 851972, 7, 0, 851999, 3, 0, 852004, 7, 0, 852027, 3, 0, 917508, 7, 0, 917535, 3, 0, 917540, 7, 0, 917563, 3, 0, 983044, 7, 0, 983071, 3, 0, 983076, 7, 0, 983099, 3, 0, 1048580, 7, 0, 1048607, 3, 0, 1048612, 7, 0, 1048635, 3, 0, 1114116, 7, 0, 1114143, 3, 0, 1114148, 7, 0, 1114171, 3, 0, 1179652, 7, 0, 1179679, 3, 0, 1179684, 7, 0, 1179707, 3, 0, 1245188, 7, 0, 1245215, 3, 0, 1245220, 7, 0, 1245243, 3, 0, 1310724, 7, 0, 1310751, 3, 0, 1310756, 7, 0, 1310779, 3, 0, 1376260, 7, 0, 1376287, 3, 0, 1376292, 7, 0, 1376315, 3, 0, 1441796, 7, 0, 1441823, 3, 0, 1441828, 7, 0, 1441851, 3, 0, 1507332, 7, 0, 1507359, 3, 0, 1507364, 7, 0, 1507387, 3, 0, 1572868, 7, 0, 1572895, 3, 0, 1572900, 7, 0, 1572923, 3, 0, 1638404, 7, 0, 1638431, 3, 0, 1638436, 7, 0, 1638459, 3, 0, 1703940, 7, 0, 1703967, 3, 0, 1703972, 7, 0, 1703995, 3, 0, 1769476, 7, 0, 1769503, 3, 0, 1769508, 7, 0, 1769531, 3, 0, 1835012, 7, 0, 1835039, 3, 0, 1835044, 7, 0, 1835067, 3, 0, 1900548, 7, 0, 1900575, 3, 0, 1900580, 7, 0, 1900603, 3, 0, 1966084, 7, 0, 1966111, 3, 0, 1966116, 7, 0, 1966139, 3, 0, 2031620, 6, 0, 2031621, 5, 0, 2031622, 5, 0, 2031623, 5, 0, 2031624, 5, 0, 2031625, 5, 0, 2031626, 5, 0, 2031627, 5, 0, 2031628, 5, 0, 2031629, 5, 0, 2031630, 5, 0, 2031631, 5, 0, 2031632, 5, 0, 2031633, 5, 0, 2031634, 5, 0, 2031635, 5, 0, 2031636, 5, 0, 2031637, 5, 0, 2031638, 5, 0, 2031639, 5, 0, 2031640, 5, 0, 2031641, 5, 0, 2031642, 5, 0, 2031643, 5, 0, 2031644, 5, 0, 2031645, 5, 0, 2031646, 5, 0, 2031647, 4, 0, 2031652, 6, 0, 2031653, 5, 0, 2031654, 5, 0, 2031655, 5, 0, 2031656, 5, 0, 2031657, 5, 0, 2031658, 5, 0, 2031659, 5, 0, 2031660, 5, 0, 2031661, 5, 0, 2031662, 5, 0, 2031663, 5, 0, 2031664, 5, 0, 2031665, 5, 0, 2031666, 5, 0, 2031667, 5, 0, 2031668, 5, 0, 2031669, 5, 0, 2031670, 5, 0, 2031671, 5, 0, 2031672, 5, 0, 2031673, 5, 0, 2031674, 5, 0, 2031675, 4, 0 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/OverlayHUD"]
margin_left = 72.0
margin_top = 136.0
margin_right = 504.0
margin_bottom = 504.0
color = Color( 0.219608, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/OverlayHUD"]
margin_left = 584.0
margin_top = 136.0
margin_right = 952.0
margin_bottom = 504.0
color = Color( 0.219608, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryLabel" type="Label" parent="CanvasLayer/OverlayHUD"]
margin_left = 64.0
margin_top = 128.0
margin_right = 256.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 3 )
text = "Inventory"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterLabel" type="Label" parent="CanvasLayer/OverlayHUD"]
margin_left = 576.0
margin_top = 128.0
margin_right = 768.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 3 )
text = "Character"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/OverlayHUD"]
margin_left = 608.0
margin_top = 192.0
margin_right = 736.0
margin_bottom = 352.0
texture = SubResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OHealthLabel" type="Label" parent="CanvasLayer/OverlayHUD"]
margin_left = 768.0
margin_top = 192.0
margin_right = 832.0
margin_bottom = 224.0
custom_fonts/font = SubResource( 3 )
text = "HP: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OPSCLabel" type="Label" parent="CanvasLayer/OverlayHUD"]
margin_left = 640.0
margin_top = 368.0
margin_right = 800.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 3 )
text = "Constitution:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OPSCAmount" type="Label" parent="CanvasLayer/OverlayHUD"]
margin_left = 832.0
margin_top = 368.0
margin_right = 896.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OPSDLabel" type="Label" parent="CanvasLayer/OverlayHUD"]
margin_left = 640.0
margin_top = 392.0
margin_right = 800.0
margin_bottom = 416.0
custom_fonts/font = SubResource( 3 )
text = "Dexterity:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OPSDAmount" type="Label" parent="CanvasLayer/OverlayHUD"]
margin_left = 832.0
margin_top = 392.0
margin_right = 896.0
margin_bottom = 416.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OPSSLabel" type="Label" parent="CanvasLayer/OverlayHUD"]
margin_left = 640.0
margin_top = 416.0
margin_right = 800.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 3 )
text = "Strength:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OPSSAmount" type="Label" parent="CanvasLayer/OverlayHUD"]
margin_left = 832.0
margin_top = 416.0
margin_right = 896.0
margin_bottom = 440.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OPSILabel" type="Label" parent="CanvasLayer/OverlayHUD"]
margin_left = 640.0
margin_top = 440.0
margin_right = 800.0
margin_bottom = 464.0
custom_fonts/font = SubResource( 3 )
text = "Initiative:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OPSIAmount" type="Label" parent="CanvasLayer/OverlayHUD"]
margin_left = 832.0
margin_top = 440.0
margin_right = 896.0
margin_bottom = 464.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiniHUD" type="Node2D" parent="CanvasLayer"]

[node name="Window2" type="TileMap" parent="CanvasLayer/MiniHUD"]
z_index = 999
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65583, 0, 0, 65584, 1, 0, 65585, 1, 0, 65586, 1, 0, 65587, 1, 0, 65588, 1, 0, 65589, 1, 0, 65590, 1, 0, 65591, 1, 0, 65592, 1, 0, 65593, 1, 0, 65594, 1, 0, 65595, 1, 0, 65596, 2, 0, 131119, 7, 0, 131132, 3, 0, 196655, 7, 0, 196668, 3, 0, 262191, 6, 0, 262192, 5, 0, 262193, 5, 0, 262194, 5, 0, 262195, 5, 0, 262196, 5, 0, 262197, 5, 0, 262198, 5, 0, 262199, 5, 0, 262200, 5, 0, 262201, 5, 0, 262202, 5, 0, 262203, 5, 0, 262204, 4, 0 )

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/MiniHUD"]
margin_left = 760.0
margin_top = 24.0
margin_right = 968.0
margin_bottom = 72.0
color = Color( 0.219608, 0.2, 0.2, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="CanvasLayer/MiniHUD"]
margin_left = 768.0
margin_top = 32.0
margin_right = 832.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "HP"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthAmount" type="Label" parent="CanvasLayer/MiniHUD"]
margin_left = 768.0
margin_top = 48.0
margin_right = 832.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldLabel" type="Label" parent="CanvasLayer/MiniHUD"]
margin_left = 832.0
margin_top = 32.0
margin_right = 896.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 8, 8 )
custom_fonts/font = SubResource( 3 )
text = "gp"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoldAmount" type="Label" parent="CanvasLayer/MiniHUD"]
margin_left = 832.0
margin_top = 48.0
margin_right = 896.0
margin_bottom = 65.0
rect_pivot_offset = Vector2( 8, 8 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="Label" parent="CanvasLayer/MiniHUD"]
margin_left = 896.0
margin_top = 32.0
margin_right = 960.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "lvl"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelAmount" type="Label" parent="CanvasLayer/MiniHUD"]
margin_left = 896.0
margin_top = 48.0
margin_right = 960.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
